<?xml version="1.0"?>
<package format="2">
  <name>ros-test</name>
  <version>1.0.0</version>
  <description>ROS unit tests example package.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
</package>
